--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-dist/
+build/
 
 # Created by https://www.gitignore.io/api/node,windows,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=node,windows,visualstudiocode
