--- a/modules/package.json
+++ b/modules/package.json
@@ -1,12 +1,12 @@
 {
+    "version": "0.1.0",
     "private": true,
-    "workspaces": [
-        "jervis-common",
-        "jervis-interfaces"
-    ],
     "devDependencies": {
         "grunt": "^1.0.3",
         "grunt-tslint": "^5.0.2",
         "grunt-typescript": "^0.8.0"
+    },
+    "dependencies": {
+        "cross-env": "^5.2.0"
     }
 }
